<resources>
    <string name="app_name">Component</string>
    <string name="title_navigation_item1">首页</string>
    <string name="title_navigation_item2">购物</string>
    <string name="title_navigation_item3">消息</string>
    <string name="title_navigation_item4">我</string>
    <string name="title_navigation_item5">添加</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab_title1">关注</string>
    <string name="home_tab_title2">主页</string>
    <string name="home_tab_title3">同城</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>