<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.index.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_home_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            app:tabGravity="center"
            app:tabIndicatorColor="#ff678f"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="#ff678f"
            app:tabTextColor="#333333"
            app:tabUnboundedRipple="true"
            app:tabTextAppearance="@style/HomeTabLayoutText">

            <com.google.android.material.tabs.TabItem
                android:text="@string/home_tab_title1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/home_tab_title2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/home_tab_title3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />


        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_viewPager"
            android:layout_width="match_parent"
            android:layout_below="@+id/tab_home_tab"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>

</FrameLayout>